--- a/RNATranscription/src/main/webapp/theme/css/common.css
+++ b/RNATranscription/src/main/webapp/theme/css/common.css
@@ -45,3 +45,46 @@ a:focus {
     color: #097adc;
     text-decoration: none;
 }
+
+.breadcrumb {
+    border-radius: 0;
+}
+
+/* 表单 */
+.form_line {
+    width: 310px;
+    margin: 15px auto;
+}
+
+.form_line label {
+    display: inline-block;
+    vertical-align: middle;
+    width: 60px;
+}
+
+.form_line input {
+    width: 240px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+/* 消息提示 */
+.message {
+    width: 200px;
+    height: 50px;
+    color: #000;
+    line-height: 50px;
+    text-align: center;
+    position: fixed;
+    top: 1px;
+    left: 50%;
+    transform: translate(-100px, 0);
+}
+
+.message.success {
+    background-color: #d0f7c1;
+}
+
+.message.error {
+    background-color: #ffcfcf;
+}
