--- a/RNATranscription/src/main/webapp/business/application/views/application.html
+++ b/RNATranscription/src/main/webapp/business/application/views/application.html
@@ -17,6 +17,10 @@
 </div>
 
 <style>
+    #content {
+        background-color: #e0e0e0;
+    }
+
     .app_each_app {
         width: 250px;
         height: 160px;
