--- a/RNATranscription/src/main/webapp/business/upload/views/upload.html
+++ b/RNATranscription/src/main/webapp/business/upload/views/upload.html
@@ -1,5 +1,53 @@
 <!-- Created by L.H.S on 2017/8/14. -->
 
-<blockquote>
-    upload
-</blockquote>
+<div class="upload_table_container">
+    <button class="btn btn-primary">上传文件</button>
+
+    <div class="input-group">
+        <input type="text" class="form-control" placeholder="请输入关键字搜索..."
+               ng-model="key" ng-change="search()">
+        <span class="input-group-btn">
+        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+      </span>
+    </div>
+</div>
+
+<div class="upload_table_container">
+    <table class="table table-striped table-hover">
+        <thead>
+        <th>文件名</th>
+        <th>文件类型</th>
+        <th>文件大小</th>
+        <th>上传日期</th>
+        <th>操作</th>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in fileList track by $index">
+            <td>{{item.name}}</td>
+            <td>{{item.type}}</td>
+            <td>{{item.size}}</td>
+            <td>{{item.date}}</td>
+            <td>
+                <a class="red" ng-click="deleteFile(item, $index)">删除</a>
+            </td>
+        </tr>
+        <tr ng-show="fileList.length==0||!fileList">
+            <td colspan="5"  class="no_data">
+                <i class="fa fa-info-circle"></i>
+                暂无数据
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<style>
+    .upload_table_container {
+        margin: 15px 15px;
+    }
+
+    .input-group {
+        width: 300px;
+        float: right;
+    }
+</style>
