--- a/RNATranscription/src/main/webapp/theme/css/common.css
+++ b/RNATranscription/src/main/webapp/theme/css/common.css
@@ -64,6 +64,15 @@ a.blue:focus {
     color: #0b508c;
 }
 
+button a {
+    color: #fff;
+}
+
+button a:hover,
+button a:focus {
+    color: #fff;
+}
+
 .breadcrumb {
     border-radius: 0;
 }
