--- a/RNATranscription/src/main/resources/static/webuploader/webuploader.css
+++ b/RNATranscription/src/main/resources/static/webuploader/webuploader.css
@@ -10,7 +10,7 @@
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
-	background: #00b7ee;
+	background: #337ab7;
 	padding: 10px 15px;
 	color: #fff;
 	text-align: center;
@@ -18,7 +18,7 @@
 	overflow: hidden;
 }
 .webuploader-pick-hover {
-	background: #00a2d4;
+	background: #286090;
 }
 
 .webuploader-pick-disable {
@@ -26,3 +26,6 @@
 	pointer-events:none;
 }
 
+.btn-danger {
+	margin-left: 10px;
+}
