--- a/RNATranscription/src/main/resources/templates/webuploader.html
+++ b/RNATranscription/src/main/resources/templates/webuploader.html
@@ -2,57 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <!--引入CSS-->
-    <!--<link rel="stylesheet" type="text/css" href="static/html/bigFileUpload/assets/bootstrap-3.3.7-dist/css/bootstrap.css">-->
-    <link rel="stylesheet" type="text/css" href="/webuploader/webuploader.css">
+    <title>uploader</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+    <!--引入CSS-->
+    <link rel="stylesheet" type="text/css" href="/webuploader/webuploader.css">
 </head>
 <body>
-<!--官网例子-->
-<!--<div id="uploader" class="wu-example">-->
-<!--&lt;!&ndash;用来存放文件信息&ndash;&gt;-->
-<!--<div id="thelist" class="uploader-list"></div>-->
-<!--<div class="btns">-->
-<!--<div id="picker">选择文件</div>-->
-<!--<button id="ctlBtn" class="btn btn-default">开始上传</button>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;单文件&ndash;&gt;-->
-<!--<div id="uploader" class="wu-example">-->
-    <!--&lt;!&ndash;用来存放文件信息&ndash;&gt;-->
-    <!--<div id="thelist" class="uploader-list"></div>-->
-    <!--<div class="btns">-->
-        <!--<div id="attach"></div>-->
-        <!--<button id="upload" class="btn btn-default">开始上传</button>-->
-    <!--</div>-->
-<!--</div>-->
-
-<!--多文件-->
-<!--<div id="uploader1" class="wu-example">-->
-<!--&lt;!&ndash;用来存放文件信息&ndash;&gt;-->
-<!--<div id="thelist1" class="uploader-list"></div>-->
-<!--<div class="btns">-->
-<!--<div id="multi"></div>-->
-<!--<input type="button" value="上传" id="multiUpload"/>-->
-<!--</div>-->
-<!--</div>-->
 
 <section class="content">
+
     <div class="container" style="margin-top: 20px">
         <div class="alert alert-info">可以一次上传多个大文件</div>
     </div>
-    <div class="container" style="margin-top: 50px">
-        <div id="uploader" class="container">
+
+    <div class="container">
+        <div id="uploader">
             <div class="container">
-                <div id="fileList" class="uploader-list"></div>
                 <!--存放文件的容器-->
+                <div id="fileList" class="uploader-list"></div>
             </div>
-            <div class="btns container">
+
+            <div class="btns">
                 <div id="picker" class="webuploader-container"
                      style="float: left; margin-right: 10px">
                     <div>
@@ -63,13 +35,14 @@
 
                 <div id="UploadBtn" class="webuploader-pick"
                      style="float: left; margin-right: 10px">开始上传</div>
+
                 <div id="StopBtn" class="webuploader-pick"
                      style="float: left; margin-right: 10px" status="suspend">暂停上传</div>
             </div>
+
         </div>
     </div>
 </section>
-
 
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="/webuploader/webuploader.min.js"></script>
