--- a/RNATranscription/src/main/webapp/business/upload/views/upload.html
+++ b/RNATranscription/src/main/webapp/business/upload/views/upload.html
@@ -1,7 +1,7 @@
 <!-- Created by L.H.S on 2017/8/14. -->
 
 <div class="table_container">
-    <button class="btn btn-primary">上传文件</button>
+    <button class="btn btn-primary"><a href="/uploader" target="_black">上传文件</a></button>
 
     <div class="input-group">
         <input type="text" class="form-control" placeholder="请输入关键字（文件名、类型）搜索..."
@@ -32,7 +32,7 @@
             </td>
         </tr>
         <tr ng-show="fileList.length==0||!fileList">
-            <td colspan="5"  class="no_data">
+            <td colspan="5" class="no_data">
                 <i class="fa fa-info-circle"></i>
                 暂无数据
             </td>
