--- a/RNATranscription/src/main/webapp/business/application/views/appDetail.html
+++ b/RNATranscription/src/main/webapp/business/application/views/appDetail.html
@@ -11,7 +11,7 @@
         <div class="app_detail_config">
             <div class="task_config_container">
                 <div class="form_line">
-                    <label>任务编号</label>
+                    <label>任务名</label>
                     <input class="form-control" type="text" ng-model="taskModel.taskName">
                 </div>
 
