--- a/RNATranscription/src/main/webapp/business/task/views/task.html
+++ b/RNATranscription/src/main/webapp/business/task/views/task.html
@@ -13,8 +13,8 @@
 <div class="table_container">
     <table class="table table-striped table-hover">
         <thead>
-        <th>任务编号</th>
-        <th>应用名</th>
+        <th>任务名称</th>
+        <th>任务类型</th>
         <th>执行时间</th>
         <th>执行结果</th>
         <th>下载文件</th>
