--- a/RNATranscription/src/main/webapp/business/task/views/task.html
+++ b/RNATranscription/src/main/webapp/business/task/views/task.html
@@ -1,4 +1,5 @@
 <!-- Created by L.H.S on 2017/8/14. -->
+<div class="message" ng-class="message.cls" ng-show="message">{{message.content}}</div>
 
 <div class="table_container">
     <div class="input-group">
@@ -25,11 +26,12 @@
             <td>{{item.type}}</td>
             <td>{{item.startAt}}</td>
             <td><i class="fa" ng-class="{'fa-check-circle':item.status=='success',
-            'fa-times-circle':item.status=='fail'||item.status=='overtime', 'fa-play-circle':item.status=='queuing'}"></i>
+            'fa-times-circle':item.status=='fail'||item.status=='overtime',
+            'fa-play-circle':item.status=='queuing'||item.status=='executing'}"></i>
                 <span>{{item.status}}</span>
             </td>
             <td>
-                <a class="blue" ng-click="download(item)">下载</a>
+                <a class="blue" ng-click="download(item)" ng-if="item.status=='success'">下载</a>
             </td>
         </tr>
         <tr ng-show="taskList.length==0||!taskList">
