--- a/RNATranscription/src/main/webapp/business/backend/views/admin.html
+++ b/RNATranscription/src/main/webapp/business/backend/views/admin.html
@@ -20,7 +20,7 @@
         <tbody>
         <tr ng-repeat="item in userList track by $index">
             <td>{{item.username}}</td>
-            <td>{{item.lastLoginTime}}</td>
+            <td>{{item.lastLoginTime_f}}</td>
             <td>{{item.lastLoginAddress}}</td>
             <td>
                 <a class="red" ng-click="deleteUser(item, $index)">删除</a>
