webapp目录结构重构

--- a/RNATranscription/src/main/resources/templates/index.html
+++ b/RNATranscription/src/main/resources/templates/index.html
@@ -11,9 +11,9 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0"/>
     <!--框架必须的CSS文件,可定制化-->
-    <link type="text/css" href="./theme/bootstrap/bootstrap.css" rel="stylesheet">
-    <link type="text/css" href="./theme/css/fontawesome-all.min.css" rel="stylesheet">
-    <link type="text/css" href="./theme/css/common.css" rel="stylesheet">
+    <link type="text/css" href="/theme/bootstrap/bootstrap.css" rel="stylesheet">
+    <link type="text/css" href="/theme/css/fontawesome-all.min.css" rel="stylesheet">
+    <link type="text/css" href="/theme/css/common.css" rel="stylesheet">
 
     <!--<link type="image/x-icon" href="./theme/custom/img/favicon.ico" rel="icon"/>-->
 </head>
@@ -39,16 +39,16 @@
 
 
 <!-- 模块化代码加载起始处，入口js为main.js -->
-<script type="text/javascript" src="./lib/jquery.min.js"></script>
-<script type="text/javascript" src="./lib/angular/angular.js"></script>
-<script type="text/javascript" src="./lib/angular/angular-animate.js"></script>
-<script type="text/javascript" src="./lib/angular/angular-touch.js"></script>
-<script type="text/javascript" src="./lib/angular/angular-sanitize.js"></script>
-<script type="text/javascript" src="./lib/require.js"></script>
+<script type="text/javascript" src="/lib/jquery.min.js"></script>
+<script type="text/javascript" src="/lib/angular/angular.js"></script>
+<script type="text/javascript" src="/lib/angular/angular-animate.js"></script>
+<script type="text/javascript" src="/lib/angular/angular-touch.js"></script>
+<script type="text/javascript" src="/lib/angular/angular-sanitize.js"></script>
+<script type="text/javascript" src="/lib/require.js"></script>
 <!-- bootstrap -->
-<script type="text/javascript" src="./lib/bootstrap/ui-bootstrap-tpls.js"></script>
+<script type="text/javascript" src="/lib/bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- main -->
-<script type="text/javascript" src="./main.js"></script>
+<script type="text/javascript" src="/main.js"></script>
 
 </body>
 </html>
