登录加载条

--- a/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
+++ b/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
@@ -23,6 +23,22 @@
                     <button class="btn btn-info upload_btn"><a href="/uploader" target="_black">上传新文件</a></button>
                 </div>
 
+                <div class="form_line">
+                    <label>文件格式</label>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                            Action <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </div>
+                </div>
+
                 <button class="btn btn-primary submit" ng-click="run()">提交</button>
             </div>
         </div>
