--- a/RNATranscription/src/main/resources/templates/index.html
+++ b/RNATranscription/src/main/resources/templates/index.html
@@ -46,6 +46,7 @@
 <script type="text/javascript" src="/lib/angular/angular-sanitize.js"></script>
 <script type="text/javascript" src="/lib/require.js"></script>
 <!-- bootstrap -->
+<script type="text/javascript" src="/lib/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="/lib/bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- main -->
 <script type="text/javascript" src="/main.js"></script>
