--- a/RNATranscription/src/main/resources/templates/webuploader.html
+++ b/RNATranscription/src/main/resources/templates/webuploader.html
@@ -38,6 +38,8 @@
 
                 <div id="StopBtn" class="webuploader-pick"
                      style="float: left; margin-right: 10px" status="suspend">暂停上传</div>
+
+                <button class="btn btn-warning" style="padding: 9px 15px" onclick="window.close();">返回</button>
             </div>
 
         </div>
