--- a/RNATranscription/src/main/resources/static/business/task/views/task.html
+++ b/RNATranscription/src/main/resources/static/business/task/views/task.html
@@ -2,7 +2,7 @@
 <div class="message" ng-class="message.cls" ng-show="message">{{message.content}}</div>
 
 <div class="table_container">
-    <button class="btn btn-primary" ng-click="getTasks()">刷新</button>
+    <button class="btn btn-primary" ng-click="refreshBtn()">刷新</button>
 
     <div class="input-group">
         <input type="text" class="form-control" placeholder="请输入关键字（任务编号、应用名、执行结果）搜索..."
