文件管理引入文件夹&其他

--- a/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
+++ b/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
@@ -11,6 +11,11 @@
         <div class="app_detail_config">
             <div class="task_config_container">
 
+                <div class="form_line">
+                    <label>任务名称</label>
+                    <input class="form-control" type="text" ng-model="taskModel.taskName">
+                </div>
+
                 <div class="form_line" ng-repeat="item in formModel track by $index">
                     <label>{{item.label}}</label>
 
