--- a/RNATranscription/src/main/resources/templates/index.html
+++ b/RNATranscription/src/main/resources/templates/index.html
@@ -48,6 +48,8 @@
 <!-- bootstrap -->
 <script type="text/javascript" src="/lib/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="/lib/bootstrap/ui-bootstrap-tpls.js"></script>
+<!-- tree -->
+<script type="text/javascript" src="/lib/tree/angular-tree-control.js"></script>
 <!-- main -->
 <script type="text/javascript" src="/main.js"></script>
 
