--- a/RNATranscription/src/main/resources/static/webuploader/webuploader.css
+++ b/RNATranscription/src/main/resources/static/webuploader/webuploader.css
@@ -1,31 +1,38 @@
 .webuploader-container {
-	position: relative;
+    position: relative;
 }
+
 .webuploader-element-invisible {
-	position: absolute !important;
-	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-    clip: rect(1px,1px,1px,1px);
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
 }
+
 .webuploader-pick {
-	position: relative;
-	display: inline-block;
-	cursor: pointer;
-	background: #337ab7;
-	padding: 10px 15px;
-	color: #fff;
-	text-align: center;
-	border-radius: 3px;
-	overflow: hidden;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    background: #337ab7;
+    padding: 10px 15px;
+    color: #fff;
+    text-align: center;
+    border-radius: 3px;
+    overflow: hidden;
 }
+
 .webuploader-pick-hover {
-	background: #286090;
+    background: #286090;
 }
 
 .webuploader-pick-disable {
-	opacity: 0.6;
-	pointer-events:none;
+    opacity: 0.6;
+    pointer-events: none;
 }
 
 .btn-danger {
-	margin-left: 10px;
+    margin-left: 10px;
+}
+
+#relativePath {
+    font-weight: bold;
 }
