--- a/RNATranscription/src/main/resources/templates/webuploader.html
+++ b/RNATranscription/src/main/resources/templates/webuploader.html
@@ -14,6 +14,11 @@
 <section class="content">
 
     <div class="container" style="margin-top: 20px">
+        当前文件夹:
+        <span id="relativePath"></span>
+    </div>
+
+    <div class="container" style="margin-top: 20px">
         <div class="alert alert-info">可以一次上传多个大文件</div>
     </div>
 
@@ -34,10 +39,12 @@
                 </div>
 
                 <div id="UploadBtn" class="webuploader-pick"
-                     style="float: left; margin-right: 10px">开始上传</div>
+                     style="float: left; margin-right: 10px">开始上传
+                </div>
 
                 <div id="StopBtn" class="webuploader-pick"
-                     style="float: left; margin-right: 10px" status="suspend">暂停上传</div>
+                     style="float: left; margin-right: 10px" status="suspend">暂停上传
+                </div>
 
                 <button class="btn btn-warning" style="padding: 9px 15px" onclick="window.close();">返回</button>
             </div>
@@ -47,7 +54,9 @@
 </section>
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="/webuploader/webuploader.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 <script type="text/javascript" src="/js/upload.js"></script>
 </body>
 </html>
