--- a/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
+++ b/RNATranscription/src/main/resources/static/business/application/views/appDetail.html
@@ -53,12 +53,12 @@
             <uib-tabset active="active" type="tabs">
                 <!-- 说明 -->
                 <uib-tab index="0" heading="说明">
-                    此处为说明
+                    暂无说明
                 </uib-tab>
 
                 <!-- 例子 -->
                 <uib-tab index="1" heading="例子">
-                    此处为例子
+                    暂无例子
                 </uib-tab>
             </uib-tabset>
         </div>
